# connectedhomeip

examples/all-clusters-app/all-clusters-common/: all-clusters-app.matter
examples/lighting-app/lighting-common/: lighting-app.matter
examples/lighting-app/silabs/data_model/: lighting-thread-app.matter  lighting-wifi-app.matter  lighting-wifi-app.zap
integrations/docker/images/chip-cert-bins/: Dockerfile
scripts/tests/chipyaml/: pyproject.toml  setup.cfg  setup.py
src/controller/: CHIPDeviceController.h
