[build-system]
requires = ['setuptools>=45', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = "chipyaml"
version = "0.0.1"
authors = [{name = "Project CHIP Authors"}]
description = "Matter chipyaml package with adapters for YAML test execution"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.py", "*.yaml", "*.yml"]